--- a/package.json
+++ b/package.json
@@ -18,16 +18,18 @@
     "react-scripts": "^3.4.1"
   },
   "dependencies": {
-    "@happysanta/router": "^0.1.9",
-    "@vkontakte/icons": "^1.60.0",
+    "@happysanta/router": "^0.1.16",
+    "@vkontakte/icons": "^1.91.0",
     "@vkontakte/vk-bridge": "^2.3.0",
     "@vkontakte/vk-mini-apps-api": "^0.6.5",
     "@vkontakte/vk-miniapps-deploy": "0.0.17",
-    "@vkontakte/vkui": "^3.13.2",
+    "@vkontakte/vkjs": "^0.20.0",
+    "@vkontakte/vkui": "^4.5.0",
     "axios": "^0.21.0",
     "babel-eslint": "^10.1.0",
     "chalk": "^2.4.2",
     "core-js": "^3.6.4",
+    "emoji-regex": "^8.0.0",
     "eruda": "^2.2.0",
     "eruda-code": "^2.0.0",
     "eruda-dom": "^2.0.0",
